--- a/flaskApp/app/templates/base.html
+++ b/flaskApp/app/templates/base.html
@@ -18,7 +18,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar_logo">
-      <a class="navbar-brand logo" href="{{ url_for('homepage') }}"><img src="/static/logo.png" width="90px"></a>
+      <a class="navbar-brand logo" href="{{ url_for('homepage') }}"><img src="/static/logo_lowerres.jpg" width="90px"></a>
       <a class="navbar-brand" href="{{ url_for('homepage') }}" style="font-size: 28px;">
 BusWatchNI</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
