Adding Jan,Feb 2023 data; updating 12 week view to include cancellations

--- a/flaskApp/app/templates/data_details.html
+++ b/flaskApp/app/templates/data_details.html
@@ -10,6 +10,12 @@
     <h2><strong>Departures Data</strong></h2>
       <p>Each month of data is presented here as a separate compressed csv file (bzip2 compression). An example of the structure of the data is given below the download links, along with an overview of the data collection and aggregation process.</p>
 
+      <h5>2023</h5>
+        <ul>
+          <li><a href='/download_compressed/2023_02'> February</a> ({{ MonthlyDownloadFileSizes['2023_02']['.csv.bz2'] }})</li>
+          <li><a href='/download_compressed/2023_01'> January</a> ({{ MonthlyDownloadFileSizes['2023_01']['.csv.bz2'] }})</li>
+        </ul>
+
       <h5>2022</h5>
         <ul>
           <li><a href='/download_compressed/2022_12'> December</a> ({{ MonthlyDownloadFileSizes['2022_12']['.csv.bz2'] }})</li>
@@ -38,7 +44,7 @@
         </thead>
         <tbody>
           <tr>
-            <td style="text-align: center;">1661154132</td>
+            <td style="text-align: center;">2022-08-22 08:42:12</td>
             <td style="text-align: center;">10005361</td>
             <td style="text-align: center;">Bus 2k</td>
             <td style="text-align: center;">Downview, Waterloo Gardens</td>
@@ -49,7 +55,7 @@
             <td style="text-align: center;">NaN</td>
           </tr>
           <tr>
-            <td style="text-align: center;">1672527853</td>
+            <td style="text-align: center;">2022-12-31 23:04:13</td>
             <td style="text-align: center;">10010150</td>
             <td style="text-align: center;">Bus 7b</td>
             <td style="text-align: center;">Belfast, Howard Street</td>
