--- a/flaskApp/app/templates/homepage.html
+++ b/flaskApp/app/templates/homepage.html
@@ -552,7 +552,7 @@
 
         <div class="card border-danger homepage-cards">
           <div class="card card-body border-0" style="text-align: center;">
-            <p>Since {{ HighLevelSummary.loc['TwelveWeeks', 'MinDeptDate'] }}, data has been collected on <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'Count'] }} bus departures</strong>, from <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'OriginIdNunique'] }} stops</strong>, across <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'ServiceNameNunique'] }} different routes</strong>.</p>
+            <p>Since {{ HighLevelSummary.loc['TwelveWeeks', 'MinDeptDate'] }}, data has been collected on <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'Count'] }} bus departures</strong> (of which ~{{ HighLevelSummary.loc['TwelveWeeks', 'CancellationPerc'] }}% were cancelled), from <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'OriginIdNunique'] }} stops</strong>, across <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'ServiceNameNunique'] }} different routes</strong>.</p>
 
             <p>Across all these departures, the <strong>average delay </strong>between the planned and actual departure times was <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'MeanDelay'] }} minutes</strong>, while <strong>{{ HighLevelSummary.loc['TwelveWeeks', 'PercLt5Mins'] }}% </strong>of departures had a delay of <strong>5 minutes or less</strong>.</p>
           </div>
@@ -574,7 +574,7 @@
                       <ul class="summary_bullets">
                         <li>"Delay" = difference between actual and scheduled departure times.</li>
                         <li>Each "Line" contains multiple bus routes (e.g. 2a, 2b, etc).</li>
-                        <li>Cancellations have only been recorded since 12/12/2022, and so aren't shown in this view yet.</li>
+                        <li>Cancelled departures are included in the "Departures Recorded" number, but excluded when "Average Delay" and "% within 5 mins" are calculated.</li>
                       </ul>
                     </i>
                   </p>
@@ -589,6 +589,7 @@
                         <th>Average Delay (mins)</th>
                         <th>Departures within 5 mins of Schedule</th>
                         <th>Departures Recorded</th>
+                        <th>Cancellations</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -601,6 +602,7 @@
                         <td style="text-align: center">{{ row['Mean_TwelveWeeks'] }}</td>
                         <td style="text-align: center">{{ row['Perc_lte5MinDelay_TwelveWeeks'] }} &#37;</td>
                         <td style="text-align: center">{{ row['Count_TwelveWeeks'] }}</td>
+                        <td style="text-align:  center">{{ row['cancellation_percentage_TwelveWeeks'] }} &#37;</td>
                       </tr>
                       {% endfor %}
                     </tbody>
