--- a/flaskApp/app/templates/data_details.html
+++ b/flaskApp/app/templates/data_details.html
@@ -31,7 +31,7 @@
       <table id='monthlyDataExampleTable' class="table display" style="white-space: nowrap;">
         <thead>
           <tr>
-            <th style="text-align: center;">QueryDateUnix</th>
+            <th style="text-align: center;">QueryDate</th>
             <th style="text-align: center;">OriginId</th>
             <th style="text-align: center;">ServiceName</th>
             <th style="text-align: center;">DestinationName</th>
@@ -69,7 +69,7 @@
       </table>
 
       <br>
-      <p>All columns come directly from the response of the https://www.translink.co.uk/JourneyPlannerApi/GetJourneyResults API, with the exception of OriginId, which is supplied as an input to the API rather than received as an output, and QueryDateUnix, which is the date and time at which the API was queried (given as a Unix timestamp) for that OriginId. The final column, IsCancelled, wasn't available when the data collection scripts were initially created, and has only been collected from 12/12/2022; this column will contain a NaN value for dates before this.</p>
+      <p>All columns come directly from the response of the https://www.translink.co.uk/JourneyPlannerApi/GetJourneyResults API, with the exception of OriginId, which is supplied as an input to the API rather than received as an output, and QueryDate, which is the date and time at which the API was queried for that OriginId. The final column, IsCancelled, wasn't available when the data collection scripts were initially created, and has only been collected from 12/12/2022; this column will contain a NaN value for dates before this.</p>
 
       <br>
       <h4>Data Collection Details</h4>
@@ -79,7 +79,7 @@
           <li>For each bus route being monitored ("ServiceName" in the example data above), 7-10 stops ("OriginId" above) were selected along the length of the route.</li>
           <li>The API https://www.translink.co.uk/JourneyPlannerApi/GetJourneyResults is queried for each stop ("OriginId") selected along each route ("ServiceName") approximately every 2 minutes between 05:00 and 00:00, with the resulting data saved out as csvs.</li>
           <li>At 03:00, the many csv files created the day before are combined together into a single file for that day. Some filtering is done at this stage: 1) The API returns a list of all upcoming departures from the specified OriginId, which may include routes not currently being tracked by BusWatchNI; data on these routes are discarded; 2) Data on departures for the following day are also discarded (generally speaking there are no Metro departures after midnight).</li>
-          <li>Since each stop is queried every 2 minutes, each departure will appear multiple times in the resulting data. Since the most recent entry (i.e. the row with the largest value of QueryDateUnix) should be the most accurate measure of the actual departure time, the data for each departure is sorted by QueryDateUnix (in descending order), and then filtered to only keep the first row to be used as the "actual" departure time.</li>
+          <li>Since each stop is queried every 2 minutes, each departure will appear multiple times in the resulting data. Since the most recent entry (i.e. the row with the latest of QueryDate) should be the most accurate measure of the actual departure time, the data for each departure is sorted by QueryDate (in descending order), and then filtered to only keep the first row to be used as the "actual" departure time.</li>
           <li>At 04:00, the aggregated data from the day before is appended to the existing data from previous days. An additional bit of filtering is done at this stage before this data is used to create the plots shown in BusWatchNI: since a bus route stops at more stops than just those selected for that route in step 1, the collected data may have rows for departures from more than the 7-10 OriginIds specifically selected for that route. To enable easier comparison between routes, at this point the data is filtered to only keep departures from the 7-10 OriginIds selected for each ServiceName.</li>
           <li>At this point the data consists of a single row for each combination of OriginId, ServiceName, DestinationName, PlannedDepartureDate and PlannedDepartureTime; this dataset is then used to create the monthly files above and the plots shown on BusWatchNI.</li>
         </ol>
