--- a/flaskApp/app/templates/base.html
+++ b/flaskApp/app/templates/base.html
@@ -18,7 +18,9 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar_logo">
-      <a class="navbar-brand logo" href="{{ url_for('homepage') }}"><img src="/static/logo_lowerres.jpg" width="90px"></a>
+      <div width="90px" height="90px">
+        <a class="navbar-brand logo" href="{{ url_for('homepage') }}"><img src="/static/logo_lowerres.jpg" width="90px" height="90px"></a>
+      </div>
       <a class="navbar-brand" href="{{ url_for('homepage') }}" style="font-size: 28px;">
 BusWatchNI</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,6 +30,28 @@ BusWatchNI</a>
         <div class="navbar-nav navlink_logo">
           <li class="nav-item">
             <a class="nav-link navlink_logo" href="{{ url_for('homepage') }}" style="font-size: 22px;">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link navlink_logo dropdown-toggle" style="font-size: 22px;"
+               href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Lines
+            </a>
+            <div class="dropdown-menu" style="overflow-y: visible; background-color: #343a40; z-index: 10000;" aria-labelledby="navbarDropdown">
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='1') }}">  1 (Antrim Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='2') }}">  2 (Shore Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='3') }}">  3 (Holywood Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='4') }}">  4 (Upper N'Ards Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='5') }}">  5 (Castlereagh Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='6') }}">  6 (Cregagh Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='7') }}">  7 (Ormeau Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='8') }}">  8 (Malone Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='9') }}">  9 (Lisburn Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='10') }}">  10 (Falls Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='11') }}">  11 (Shankill Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='12') }}">  12 (Oldpark Road)</a>
+              <a class="nav-link dropdown-item" href="{{ url_for('line_summary', line='G') }}">  Glider (East-West/Titanic)</a>
+              <!-- <div class="dropdown-divider"></div> -->
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link navlink_logo" href="{{ url_for('about') }}" style="font-size: 22px;">About</a>
