--- a/flaskApp/app/templates/data_details.html
+++ b/flaskApp/app/templates/data_details.html
@@ -12,6 +12,8 @@
 
       <h5>2023</h5>
         <ul>
+          <li><a href='/download_compressed/2023_04'> April</a> ({{ MonthlyDownloadFileSizes['2023_04']['.csv.bz2'] }})</li>
+          <li><a href='/download_compressed/2023_03'> March</a> ({{ MonthlyDownloadFileSizes['2023_03']['.csv.bz2'] }})</li>
           <li><a href='/download_compressed/2023_02'> February</a> ({{ MonthlyDownloadFileSizes['2023_02']['.csv.bz2'] }})</li>
           <li><a href='/download_compressed/2023_01'> January</a> ({{ MonthlyDownloadFileSizes['2023_01']['.csv.bz2'] }})</li>
         </ul>
