--- a/flaskApp/app/static/buswatchni_style.css
+++ b/flaskApp/app/static/buswatchni_style.css
@@ -196,6 +196,18 @@ footer {
     background-color: #dc3545;
 }
 
+/* Hacky way to get the Lines dropdown to not all be highlighted when clicked; instead
+   just highlight the Lines part (the dropdown title) when clicked, and have hover-over
+   highlight on the options in the dropdown. Basically just fixing the colour of the
+   items in the dropdown when clicked, and then forcing the hover-over/focus highlighting
+   by using !important */
+.navbar-dark .navbar-nav .show>.nav-link {
+    color: #ffffff80;
+}
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: rgba(255,255,255,.75)!important;
+}
+
 .homepage-cards {
     border-width: 2px;
 }
